# pixxbind

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  demo_pixxbind.ipynb  pyproject.toml
pixxbind/: __init__.py
src/: helpers.hpp  pixxbind.cpp
tests/: test_bindings.py
