[build-system]
requires = [
  "scikit-build-core>=0.7.0",
  "pybind11>=2.11",
  "numpy>=1.24",
]
build-backend = "scikit_build_core.build"

[project]
name = "pixxbind"
version = "0.1.0"
description = "Image augmentations in C++ with pybind11 bindings"
readme = "README.md"
authors = [{ name = "Artem Khakimov" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
]

[tool.scikit-build]
wheel.packages = ["pixxbind"]
wheel.exclude = ["tests"]
cmake.build-type = "Release"
cmake.minimum-version = "3.15"
